<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ugcupload_color_background">

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/back_ll"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:src="@drawable/ugcupload_btn_back_gray" />

            <TextView
                android:id="@+id/back_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:gravity="center_vertical"
                android:text="@string/ugcupload_back"
                android:textColor="@color/ugcupload_white"
                android:textSize="14dp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ugcupload_title_picture_upload"
            android:textColor="@color/ugcupload_white"
            android:textSize="@dimen/ugcupload_h10" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:textColor="@color/ugcupload_white"
            android:text="@string/ugcupload_text_local_picture_preview"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/iv_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:src="@drawable/ugcupload_pic_add"
            android:layout_below="@id/layout_title"
            android:scaleType="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:textColor="@color/ugcupload_white"
            android:text="@string/ugcupload_text_remote_picture_preview"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/iv_picture_network"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:scaleType="center"
            android:src="@drawable/ugcupload_pic_loading"
            android:layout_below="@id/layout_title"
            />

    </LinearLayout>
    <Button
        android:id="@+id/btn_publish"
        android:layout_width="345dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/ugcupload_color_accent"
        android:text="@string/ugcupload_btn_publish"
        android:textColor="@color/ugcupload_white"
        android:textSize="@dimen/ugcupload_h8" />
</LinearLayout>